2003-04-06  Mark Salter  <msalter@redhat.com>

	* src/ixp425_pci.c (cyg_hal_plf_pci_init): Support non-host mode.

2003-02-22  Mark Salter  <msalter@redhat.com>

	* src/ixp425_pci.c (cyg_hal_plf_pci_init): Don't reinit PCI
	controller on warm reset.
	* cdl/hal_arm_xscale_ixp425.cdl: Fix requirement for linux exec
	address.

2003-02-13  Mark Salter  <msalter@redhat.com>

	* include/var_io.h (CYGARC_UNCACHED_ADDRESS): Move uncached area.

2003-02-07  Mark Salter  <msalter@redhat.com>

	* src/ixp425_diag.c: Support platform config of ports used.
	* src/ixp425_misc.c: Ditto.
	* src/ixp425_pci.c: Ditto.
	
	* include/var_io.h: Fix compile errors when building without PCI.

2002-12-19  Mark Salter  <msalter@redhat.com>

	* include/hal_ixp425.h (EXP_BYTE_RD16): New definition.

2002-12-18  Mark Salter  <msalter@redhat.com>

	* src/ixp425_misc.c (hal_interrupt_configure): Fix tests and
	GPIO register selection.

2002-12-17  Mark Salter  <msalter@redhat.com>

	* src/ixp425_pci.c (cyg_hal_plf_pci_init): Fix PCI read/write functions.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,