@@ -1,3 +1,13 @@
+2003-04-08  Mark Salter  <msalter@redhat.com>
+
+	* include/hal_var_ints.h (CYGHWR_HAL_GDB_PORT_VECTORS_MATCH): Define.
+
+	* src/ixp425_misc.c (hal_interrupt_mask): Mask QM1 interrupt is all
+	NPE interrupts are masked.
+	(hal_interrupt_unmask): Unmask QM1 is any NPE interrupts unmasked.
+
+	* include/hal_ixp425.h (IXP425_INTR_FIQ_ENC_ST): Fix offset.
+ 
 2003-04-06  Mark Salter  <msalter@redhat.com>
 
 	* src/ixp425_pci.c (cyg_hal_plf_pci_init): Support non-host mode.
